--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: ラジオニュース
-description: >-
-  ラジオニュース。日本、そして世界の動きをわかりやすく、深く多角的にお伝えします。ラジオ第1で放送された、けさのニュース、正午のニュース、きょうのニュース、列島リレーニュース、ジャーナルが再生できます。
+title: ラジオ・ニュース
+description: ラジオ・ニュース。日本、そして世界の動きをわかりやすく、深く多角的にお伝えします。ラジオ第1で放送された、けさのニュース、正午のニュース、きょうのニュース、列島リレーニュース、ジャーナルが再生できます。
 baseurl: "/radionews"
 url: ""
 
